--- a/Reading/font/demo_fontclass.html
+++ b/Reading/font/demo_fontclass.html
@@ -25,6 +25,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-shouyou"></i>
+                    <div class="name">手游</div>
+                    <div class="fontclass">.icon-shouyou</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-sousuo"></i>
                     <div class="name">搜索</div>
                     <div class="fontclass">.icon-sousuo</div>
