--- a/Reading/font/demo_symbol.html
+++ b/Reading/font/demo_symbol.html
@@ -45,6 +45,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-shouyou"></use>
+                    </svg>
+                    <div class="name">手游</div>
+                    <div class="fontclass">#icon-shouyou</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-sousuo"></use>
                     </svg>
                     <div class="name">搜索</div>
