--- a/Reading/font/demo_unicode.html
+++ b/Reading/font/demo_unicode.html
@@ -45,6 +45,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe64d;</i>
+                    <div class="name">手游</div>
+                    <div class="code">&amp;#xe64d;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe61a;</i>
                     <div class="name">搜索</div>
                     <div class="code">&amp;#xe61a;</div>
