--- a/Reading/allworks.html
+++ b/Reading/allworks.html
@@ -22,32 +22,170 @@
 				</div>
 				<div class="worksmain_aside_selected">
 					<p><strong>已选</strong></p>
-					<span>全部</span>
+					<div class="worksmain_aside_selected_item">
+						<a class="all_type">全部</a>
+					</div>
 				</div>
 				<!--男生-->
 				<div class="worksmain_aside_selectlist">
 					<!--分类-->
-					<div class="worksmain_aside_selectlist_per">
+					<div class="worksmain_aside_selectlist_per per_type">
 						<strong><p>分类</p></strong>
 						<ul class="list-unstyled list-inline">
-							<li class="selectlist_per_li_selected"><a>全部</a></li>
-							<li><a>玄幻</a></li>
-							<li><a>奇幻</a></li>
-							<li><a>武侠</a></li>
-							<li><a>仙侠</a></li>
+							<li class="li_all selectlist_per_li_selected"><a>全部</a></li>
+							<li class="li_moretype"><a>玄幻<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>奇幻<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>武侠<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>仙侠<div class="li_down display_hidden"></div></a></li>
+							<div class="li_down_list display_hidden">
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>西方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>北方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>南方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+							</div>
 						</ul>
 						<ul class="list-unstyled list-inline">
-							<li><a>都市</a></li>
-							<li><a>现实</a></li>
-							<li><a>军事</a></li>
-							<li><a>历史</a></li>
-							<li><a>游戏</a></li>
+							<li class="li_moretype"><a>都市<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>现实<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>军事<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>历史<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>游戏<div class="li_down display_hidden"></div></a></li>
+							<div class="li_down_list display_hidden">
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>1东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>2东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>3东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>4东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>5东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+							</div>
 						</ul>
 						<ul class="list-unstyled list-inline">
-							<li><a>体育</a></li>
-							<li><a>灵异</a></li>
-							<li><a>二次元</a></li>
-							<li><a>短篇</a></li>
+							<li class="li_moretype"><a>体育<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>灵异<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>二次元<div class="li_down display_hidden"></div></a></li>
+							<li class="li_moretype"><a>短篇<div class="li_down display_hidden"></div></a></li>
+							<div class="li_down_list display_hidden">
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>1东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+								<div class="li_down_list_per display_hidden">
+									<ul class="list-inline">
+										<li class=""><a>东方玄幻</a></li>
+										<li><a>异世大陆</a></li>
+										<li><a>王朝争霸</a></li>
+									</ul>
+									<ul class="list-inline">
+										<li><a>高武世界</a></li>
+									</ul>
+								</div>
+							</div>
 						</ul>
 					</div>
 					<!--状态-->
@@ -274,24 +412,45 @@
 			<div class="worksmain_main pull-right">
 				<div class="navbar worksmain_main_head" style="height: 40px;">
 					<ul class="list-unstyled list-inline">
-						<li><a href="">人气排序</a><i class="iconfont">&#xe604;	</i></li>
-						<li><a href="">更新时间</a><i class="iconfont">&#xe604;	</i></li>
-						<li><a href="">总收藏</a><i class="iconfont">&#xe604;	</i></li>
-						<li><a href="">总字数</a><i class="iconfont">&#xe604;	</i></li>
-						<li><a href="">会员点击</a><i class="iconfont">&#xe600;</i></li>
-						<li><a href="">推荐票</a><i class="iconfont">&#xe600;</i></li>
-						<em>|</em>
-						<li>
-							<input type="checkbox" id="checkthree><label for="checkthree">3个月内新书</label>
+						<li class="sort1_type head_select"><a>人气排序<i class="s_down iconfont">&#xe604;</i></a></li>
+						<li class="sort1_type"><a>更新时间<i class="s_down iconfont display_hidden">&#xe604;</i></a></li>
+						<li class="sort1_type"><a>总收藏<i class="s_down iconfont display_hidden">&#xe604;</i></a></li>
+						<li class="sort1_type"><a>总字数<i class="s_down iconfont display_hidden">&#xe604;</i></a></li>
+						<li class="sort2_type">
+							<a href="#"><span class="text_replace">会员点击</span><i class="s_down iconfont display_hidden">&#xe604;</i><span class="caret"></span></a>
+							<ul class="dr_detail display_hidden">
+								<li><a>会员周点击</a></li>
+								<li><a>会员月点击</a></li>
+								<li><a>会员总点击</a></li>
+							</ul>
 						</li>
-						<em>|</em>
-						<li class="pull-right">
-							共44865本相关作品<i class="iconfont">&#xe618;</i><em>|</em><i class="iconfont">&#xe603;</i><i class="iconfont">&#xe613;</i>							
+						<li class="sort2_type">
+							<a><span class="text_replace">推荐票</span><i class="s_down iconfont display_hidden">&#xe604;</i><span class="caret"></span></a>
+							<ul class="dr_detail display_hidden">
+								<li><a>周推荐票</a></li>
+								<li><a>月推荐票</a></li>
+								<li><a>总推荐票</a></li>
+							</ul>
 						</li>
+							<em style="margin-right: 14px;">|</em>
+						<li class="checkbox-book">
+							<input type="checkbox" id="checkthree"><label for="checkthree">3个月内新书</label>
+						</li>
+						<div class="head_right pull-right">
+							共44865本相关作品
+							<a href="#" data-toggle="tooltip" data-placement="top" title="由于政策和作品原因，部分作品未能显示"><i class="iconfont">&#xe618;</i></a>
+							<em>|</em>
+							<div class="head_right_view">
+								<a class="head_right_view_selected"><i class="iconfont">&#xe603;</i></a>
+								<em>|</em>	
+								<a><i class="iconfont">&#xe613;</i></a>	
+							</div>
+													
+						</div>
 					</ul>
 				</div>
 				<div class="worksmain_main_books">
-					<ul class="list-unstyled list-inline">
+					<ul class="list-unstyled list-inline main_books_multi">
 						<!--1-->
 						<li>
 							<div class="books_img fl">
@@ -536,6 +695,43 @@
 							</div>
 						</li>
 					</ul>
+					<div class="main_books_list">
+						<table border="" cellspacing="" cellpadding="">
+							<thead>
+								<tr>类别	</td>
+								<td>小说书名</td>
+								<td>最新章节</td>
+								<td>字数</td>
+								<td>小说作者</td>
+								<td>更新时间</td>
+								</tr>
+							</thead>
+							<tr>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
 				<div class="worksmain_main_page pull-right">
 					<div class="worksmain_main_page_list pull-left">
 						<ul class="list-inline list-unstyled">
@@ -556,6 +752,10 @@
 					</div>
 				</div>
 			</div>
-		</div>	
+		</div>
+		<script>
+			$(function () { $("[data-toggle='tooltip']").tooltip(); });
+			$('.dropdown-toggle').dropdown()
+		</script>
 	</body>
 </html>
