--- a/Reading/index.html
+++ b/Reading/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>起点阅读</title>
 		<link rel="stylesheet" href="css/header-footer.css" />
 		<link rel="stylesheet" href="css/index.css" />
 		<link rel="stylesheet" href="font/iconfont.css" />
